--- a/index.html
+++ b/index.html
@@ -13,13 +13,73 @@
     <link rel="stylesheet" href="assets/style.css">
     <!-- Moment.js -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.24.0/moment.min.js"></script>
+    <!-- Font Awesome -->
+    <script src="https://kit.fontawesome.com/a8c1598f85.js" crossorigin="anonymous"></script>
   </head>
 
   <body>
+    <!-- header -->
   <div id="header" class="container-fluid">
       <h1 id="header-title">Weather Dashboard</h1>
   </div>
 
 
+
+<main class="container-fluid">
+    <div class="row">
+  <!-- search bar -->
+        <div class="col-md-4">
+            <div class="row">
+                <div class="input-group mb-3 col-md-12">
+                 <input type="text" class="form-control" id="city" aria-label="City">
+                 <div class="input-group-append">
+                     <button class="btn btn-primary" id="searchBtn" type="search"><i class="fas fa-search"></i></button>
+                 </div>
+                </div>
+            </div>
+    <!-- search history -->
+    <div class="card row" id="history">
+        <ul class="list-group" id="search-history">
+        </ul>
+    </div>
+</div>
+<!-- current weather -->
+<div class="col-md-8">
+    Current Weather
+    <div class="container-fluid">
+        <div id="currentWeather" class="card col-md-12">
+            <div class="card-body">
+                <div id="currentCity"></div>
+            </div>
+        </div>
+    </div>
+    
+<!-- 5 Day Weather Forecast -->
+<h3>5 Day Weather Forecast:</h3>
+<div class="container-fluid">
+    <div class="card-deck">
+        <div class="card border-primary mb-3">
+            <div class="card-body" id="1"></div>
+        </div>
+        <div class="card border-primary mb-3">
+            <div class="card-body" id="2"></div>
+        </div>
+        <div class="card border-primary mb-3">
+            <div class="card-body" id="3"></div>
+        </div>
+        <div class="card border-primary mb-3">
+            <div class="card-body" id="4"></div>
+        </div>
+        <div class="card border-primary mb-3">
+            <div class="card-body" id="5"></div>
+        </div>
+    </div>
+</div>
+
+
+
+</div>
+</div>
+</main>
   </body>
 </html>
