printed out current weather is body

--- a/index.html
+++ b/index.html
@@ -38,21 +38,32 @@
 
     <div class="card row" id="history">
     <div id="city-div"></div>
+        <div id="cityTitle"></div>
+        <div id="temperature"></div>
+        <div id="humidity"></div>
+        <div id="windSpeed"></div>
+        <div id="UV"></div>
 </div>
 </div>
 
+
+<!-- // name
+// temp: 
+//     main.temp
+
+// humidity: 
+//     main.humidity
+
+// wind speed:
+//     wind.speed
+
+// UV Index: -->
 
 <!-- current weather -->
 <div class="col-md-8">
     Current Weather
     <div class="container-fluid">
         <div id="currentWeather" class="card col-md-12">
-            <div class="card-body">
-                <div class="city"></div>
-                <div class="wind"></div>
-                <div class="humidity"></div>
-                <div class="temp"></div>
-            </div>
         </div>
     </div>
 </div>
