--- a/index.html
+++ b/index.html
@@ -38,6 +38,11 @@
 <!-- list of city buttons -->
     <div class="card row" id="history">
     <div id="city-div"></div>
+        <button id="savedBtns">Kansas City</button>
+        <button id="savedBtns">Dallas</button>
+        <button id="savedBtns">Miami</button>
+        <button id="savedBtns">New York</button>
+        <button id="savedBtns">Los Angeles</button>
 </div>
 </div>
 
