--- a/index.html
+++ b/index.html
@@ -38,11 +38,6 @@
 <!-- list of city buttons -->
     <div class="card row" id="history">
     <div id="city-div"></div>
-        <button id="savedBtns">Kansas City</button>
-        <button id="savedBtns">Dallas</button>
-        <button id="savedBtns">Miami</button>
-        <button id="savedBtns">New York</button>
-        <button id="savedBtns">Los Angeles</button>
 </div>
 </div>
 
@@ -73,7 +68,7 @@
 </body>
 
 <script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
-<script src="assets/script.js"></script>
+<script src="./assets/script.js"></script>
 </html>
 
 
