--- a/index.html
+++ b/index.html
@@ -25,7 +25,7 @@
 
 
 <!-- search bar -->
-<main class="container-fluid">
+<main class="container-fluid searchArea">
     <div class="row">
         <div class="col-md-4">
                 <form id="city-form">
@@ -54,16 +54,19 @@
             <div id="UV"></div>
         </div>
     </div>
-
+</div>
+</div>
+<div class="col-md-1"></div>
 <!-- <5 Day Weather Forecast -->
- <h3>5 Day Weather Forecast:</h3>
-    <div class="card-deck mx-0">
+<div class="container-fluid col-md-10 forecastArea">
+    <h3>5 Day Weather Forecast:</h3>
+    <div>
         <div id="fiveDayForecast" class="d-flex flex-row forecast"></div>
     </div>
+</div>
+<div class="col-md-1"></div>
 
 
-</div>
-</div>
 </main>
 </body>
 
