trying to fix error with api

--- a/index.html
+++ b/index.html
@@ -69,9 +69,9 @@
 
 </main>
 </body>
-
-<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
 <script src="./assets/script.js"></script>
+<script src="https://cdnjs.cloudflare.com/ajax/libs/jquery/3.2.1/jquery.min.js"></script>
+<!-- <script src="./assets/script.js"></script> -->
 </html>
 
 
@@ -79,8 +79,3 @@
 
 
 
-<!-- </div>
-</div>
-</main>
-  </body> -->
-<!-- </html> -->
