--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 <!-- current weather box -->
 <div class="col-md-8">
     <h3>Current Weather</h3>
-    <div class="container-fluid">
+    <div class="container-fluid currentBody">
         <div id="currentWeather" class="card col-md-12">
             <div id="cityTitle"></div>
             <div id="cityImg"></div>
